Use lxd on GitHub

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,45 +42,42 @@ jobs:
           ansible-lint
         working-directory: "${{ env.PROJECT_NAME }}"
 
-# yamllint disable rule:comments-indentation
-  # molecule:
-  #   name: "Molecule"
-  #   runs-on: "ubuntu-latest"
-  #   strategy:
-  #     fail-fast: false
-  #     matrix:
-  #       scenario:
-  #         - "default"
-  #         - "custom_names"
-  #         - "init_scripts"
-  #         - "no_volumes"
-  #         - "traefik"
-  #   steps:
-  #     - name: "Checkout"
-  #       uses: "actions/checkout@v2"
-  #       with:
-  #         path: "${{ env.PROJECT_NAME }}"
+  molecule:
+    name: "Molecule"
+    runs-on: "ubuntu-latest"
+    strategy:
+      fail-fast: false
+      matrix:
+        scenario:
+          - "default"
+          - "custom_names"
+          - "init_scripts"
+          - "no_volumes"
+          - "traefik"
+    steps:
+      - name: "Checkout"
+        uses: "actions/checkout@v2"
+        with:
+          path: "${{ env.PROJECT_NAME }}"
 
-  #     - name: "Set up Python"
-  #       uses: "actions/setup-python@v2"
-  #       with:
-  #         python-version: 3.8
+      - name: "Set up Python"
+        uses: "actions/setup-python@v2"
+        with:
+          python-version: 3.8
 
-  #     - name: "Install Docker"
-  #       run: |
-  #         apt-get install docker
+      - name: "Install test dependencies"
+        run: |
+          python3 -m pip install --upgrade pip
+          python3 -m pip install ansible molecule molecule[docker]
 
-  #     - name: "Install test dependencies"
-  #       run: |
-  #         python3 -m pip install --upgrade pip
-  #         python3 -m pip install ansible molecule molecule[docker]
+      - name: "Initialize lxd"
+        uses: "bonddim/action-lxd-init@stable"
 
-  #     - name: "Run Molecule testts"
-  #       run: |
-  #         molecule --debug test --scenario-name ${{ matrix.scenario }} -d docker
-  #       working-directory: "${{ env.PROJECT_NAME }}"
-  #       env:
-  #         PY_COLORS: '1'
-  #         ANSIBLE_FORCE_COLOR: '1'
-  #         MOLECULE_PLAYBOOK: "${{ matrix.playbook }}"
-# yamllint enable rule:comments-indentation
+      - name: "Run Molecule testts"
+        run: |
+          molecule --debug test --scenario-name ${{ matrix.scenario }} -d docker
+        working-directory: "${{ env.PROJECT_NAME }}"
+        env:
+          PY_COLORS: '1'
+          ANSIBLE_FORCE_COLOR: '1'
+          MOLECULE_PLAYBOOK: "${{ matrix.playbook }}"
