--- a/molecule/custom_names/molecule.yml
+++ b/molecule/custom_names/molecule.yml
@@ -6,7 +6,7 @@ dependency:
     role-file: "molecule/resources/requirements.yml"
 
 driver:
-  name: "docker"
+  name: "${MOLECULE_DRIVER_NAME:-docker}"
 
 platforms:
   - name: "instance"
@@ -17,13 +17,18 @@ platforms:
     privileged: "true"
     pre_build_image: "true"
 
+  - name: "lxd-instance"
+    url: "${LXD_HOST:-unix:/var/snap/lxd/common/lxd/unix.socket}"
+    source:
+      alias: "${MOLECULE_DISTRO:-ubuntu/20.04}"
+
 provisioner:
   name: "ansible"
   playbooks:
     converge: "../resources/playbooks/converge.yml"
   inventory:
-    host_vars:
-      instance:
+    group_vars:
+      all:
         postgres_docker_name: "pgcustom"
         postgres_docker_volume_init_name: "pgcustom-init"
         postgres_docker_volume_conf_name: "pgcustom-conf"
