--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -6,7 +6,7 @@ dependency:
     role-file: "molecule/resources/requirements.yml"
 
 driver:
-  name: "docker"
+  name: "${MOLECULE_DRIVER_NAME:-docker}"
 
 platforms:
   - name: "instance"
@@ -17,20 +17,25 @@ platforms:
     privileged: "true"
     pre_build_image: "true"
 
+  - name: "lxd-instance"
+    url: "${LXD_HOST:-unix:/var/snap/lxd/common/lxd/unix.socket}"
+    source:
+      alias: "${MOLECULE_DISTRO:-ubuntu/20.04}"
+
 provisioner:
   name: "ansible"
   log: true
-  playbooks:
-    converge: "../resources/playbooks/converge.yml"
   inventory:
-    host_vars:
-      instance:
+    group_vars:
+      all:
         postgres_docker_memory: "1GB"
         postgres_docker_cpu: "1"
         postgres_docker_network_create: "true"
   env:
     ANSIBLE_COLLECTIONS_PATH: "../../collections"
     ANSIBLE_ROLES_PATH: "../../roles"
+  playbooks:
+    converge: "../resources/playbooks/converge.yml"
 
 verifier:
   name: "ansible"
