Simplify picking Molecule driver

--- a/molecule/traefik/molecule.yml
+++ b/molecule/traefik/molecule.yml
@@ -6,7 +6,7 @@ dependency:
     role-file: "molecule/resources/requirements.yml"
 
 driver:
-  name: "${MOLECULE_DRIVER_NAME:-docker}"
+  name: "docker"
 
 platforms:
   - name: "instance"
