--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,10 +50,10 @@ jobs:
       matrix:
         scenario:
           - "default"
-          - "custom_names"
-          - "init_scripts"
-          - "no_volumes"
-          - "traefik"
+          # - "custom_names"
+          # - "init_scripts"
+          # - "no_volumes"
+          # - "traefik"
     steps:
       - name: "Checkout"
         uses: "actions/checkout@v2"
@@ -75,10 +75,9 @@ jobs:
 
       - name: "Run Molecule testts"
         run: |
-          molecule --debug test --scenario-name ${{ matrix.scenario }}
+          molecule --debug test -d lxd --scenario-name ${{ matrix.scenario }}
         working-directory: "${{ env.PROJECT_NAME }}"
         env:
           PY_COLORS: "1"
           ANSIBLE_FORCE_COLOR: "1"
-          MOLECULE_DRIVER_NAME: "lxd"
           MOLECULE_PLAYBOOK: "${{ matrix.playbook }}"
