--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -79,7 +79,7 @@ jobs:
 
       - name: "Run Molecule testts"
         run: |
-          molecule --debug test -d lxd --scenario-name ${{ matrix.scenario }}
+          molecule --debug test --driver-name lxd --platform-name "lxd-instance" --scenario-name ${{ matrix.scenario }}
         working-directory: "${{ env.PROJECT_NAME }}"
         env:
           PY_COLORS: "1"
