--- a/molecule/traefik/molecule.yml
+++ b/molecule/traefik/molecule.yml
@@ -9,9 +9,9 @@ driver:
   name: "docker"
 
 platforms:
-  - name: "instance"
+  - name: "docker-instance"
     image: "geerlingguy/docker-${MOLECULE_DISTRO:-ubuntu2004}-ansible:latest"
-    command: "${MOLECULE_DOCKER_COMMAND:-''}"
+    command: ${MOLECULE_DOCKER_COMMAND:-''}
     volumes:
       - "/sys/fs/cgroup:/sys/fs/cgroup:rw"
     privileged: true
