--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,12 @@
 [tox]
-envlist = ansible{5,6}
+envlist = ansible{6}
 
 [testenv]
 basepython = python3
 skip_install = true
 setenv =
     ANSIBLE_FORCE_COLOR={env:ANSIBLE_FORCE_COLOR:1}
+    ANSIBLE_REMOTE_TMP=/tmp
     ANSIBLE_VERBOSITY=1
     PY_COLORS={env:PY_COLORS:1}
     PYTHONDONTWRITEBYTECODE=1
@@ -20,12 +21,10 @@ passenv =
     TERM
 
 deps =
-    ansible-lint~=5.0
+    ansible6: ansible~=6.5
+    docker
     molecule
-    molecule-lxd>=0.4.0a0
-    yamllint>=1.26.0
-    ansible5: ansible~=5.0
-    ansible6: ansible~=6.0
+    molecule-docker
 
 commands_pre = molecule --version
 commands = molecule {posargs:test --all}
