--- a/tox.ini
+++ b/tox.ini
@@ -22,9 +22,8 @@ passenv =
 
 deps =
     ansible6: ansible~=6.5
-    docker
-    molecule
-    molecule-docker
+    molecule~=4.0
+    molecule-lxd>=0.4.0a0
 
 commands_pre = molecule --version
 commands = molecule {posargs:test --all}
