--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -6,16 +6,15 @@ dependency:
     role-file: "molecule/resources/requirements.yml"
 
 driver:
-  name: ${MOLECULE_DRIVER_NAME:-docker}
+  name: vagrant
+  provider:
+    name: virtualbox
 
 platforms:
-  - name: "docker-instance"
-    image: "geerlingguy/docker-${MOLECULE_DISTRO:-ubuntu2004}-ansible:latest"
-    command: ${MOLECULE_DOCKER_COMMAND:-''}
-    volumes:
-      - "/sys/fs/cgroup:/sys/fs/cgroup:rw"
-    privileged: true
-    pre_build_image: true
+  - name: "vagrant-instance"
+    box: "generic/${MOLECULE_DISTRO:-ubuntu2204}"
+    memory: 2048
+    cpus: 2
 
   - name: "lxd-instance"
     url: "${LXD_HOST:-unix:/var/snap/lxd/common/lxd/unix.socket}"
