--- a/.github/workflows/molecule.yml
+++ b/.github/workflows/molecule.yml
@@ -31,6 +31,11 @@ jobs:
 
       - name: "Install lint dependencies."
         run: "pip3 install yamllint ansible ansible-lint"
+      
+      - name: "Install Ansible role requirements"
+        run: >
+          ansible-galaxy role install molecule/resources/requirements.yml
+        working-directory: "organicveggie.postgres_docker"
 
       - name: "Run linters"
         run: |
@@ -67,7 +72,7 @@ jobs:
 
       - name: "Run Molecule tests."
         run: >
-          tox -- --debug test --platform_name lxd-instance --driver lxd --scenarior_name default
+          tox -- --debug test --platform_name lxd-instance --driver-name lxd --scenario_name default
         env:
           PY_COLORS: "1"
           ANSIBLE_FORCE_COLOR: "1"
