--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -20,6 +20,7 @@ platforms:
     url: "${LXD_HOST:-unix:/var/snap/lxd/common/lxd/unix.socket}"
     source:
       alias: "${MOLECULE_DISTRO:-ubuntu/20.04}"
+    type: "virtual-machine"
 
 provisioner:
   name: "ansible"
