Disable container cpu/ram/shm settings
Test to see if removing the explicit memory/cpu settings from the container allows the creation to succeed during Molecule testing on GitHub.

--- a/tasks/setup.yml
+++ b/tasks/setup.yml
@@ -171,11 +171,11 @@
     env:
       POSTGRES_PASSWORD: "{{ postgres_docker_admin_password }}"
       POSTGRES_USER: "{{ postgres_docker_admin_user }}"
-    shm_size: "{{ postgres_docker_shm_size | default(omit) }}"
     network_mode: "{{ postgres_docker_network_name }}"
     restart_policy: "unless-stopped"
-    memory: "{{ postgres_docker_memory }}"
-    cpus: "{{ postgres_docker_cpu }}"
+    shm_size: "{{ postgres_docker_shm_size | default(omit) }}"
+    memory: "{{ postgres_docker_memory | default(omit) }}"
+    cpus: "{{ postgres_docker_cpu | default(omit) }}"
     container_default_behavior: "no_defaults"
     auto_remove: "no"
     detach: "yes"
