--- a/.github/workflows/molecule.yml
+++ b/.github/workflows/molecule.yml
@@ -9,6 +9,8 @@ on:
     branches:
       - "main"
   workflow_dispatch: null
+  schedule:
+    - cron: "0 7 * * 0"
 
 defaults:
   run:
@@ -43,18 +45,18 @@ jobs:
           ansible-lint
         working-directory: "organicveggie.postgres_docker"
 
-  molecule:
-    name: "Molecule"
+  molecule-full:
+    name: "Molecule Full Suite for Latest Distros"
     runs-on: "ubuntu-latest"
     strategy:
       fail-fast: false
       matrix:
         distro:
-          - "centos/8-Stream/cloud"
+          - "centos/9-Stream/cloud"
           # - "debian/bullseye/cloud"
-          # - "fedora/35/cloud"
-          - "ubuntu/20.04/cloud"
+          # - "fedora/36/cloud"
           - "ubuntu/22.04/cloud"
+        scenario: ["default", "custom_names", "init_scripts", "no_volumes", "traefik"]
 
     steps:
       - name: "Check out the codebase."
@@ -76,48 +78,50 @@ jobs:
 
       - name: "Run Molecule tests."
         run: >
-          tox -- --debug test --platform-name lxd-instance --driver-name lxd --scenario-name default
+          tox -- --debug test --platform-name lxd-instance --driver-name lxd
         env:
           PY_COLORS: "1"
           ANSIBLE_FORCE_COLOR: "1"
           MOLECULE_DISTRO: "${{ matrix.distro }}"
+          MOLECULE_SCENARIO_NAME: "${{ matrix.scenario }}"
 
-# yamllint disable rule:comments-indentation
-  # molecule:
-  #   name: "Molecule"
-  #   runs-on: "ubuntu-22.04"
-  #   strategy:
-  #     fail-fast: false
-  #     matrix:
-  #       distro:
-  #         - "centos8"
-  #         - "ubuntu2204"
-  #         - "ubuntu2004"
-  #         - "ubuntu1804"
-  #         - "debian11"
-  #         - "debian10"
-  #         - "fedora34"
-  #         - "fedora33"
+  molecule-regression:
+    name: "Molecule Default Tests for Older Distros"
+    runs-on: "ubuntu-latest"
+    strategy:
+      fail-fast: false
+      matrix:
+        distro:
+          - "centos/8-Stream/cloud"
+          # - "debian/buster/cloud"
+          # - "fedora/35/cloud"
+          - "ubuntu/18.04/cloud"
+          - "ubuntu/20.04/cloud"
+        scenario: ["default"]
 
-  #   steps:
-  #     - name: "Check out the codebase."
-  #       uses: "actions/checkout@v2"
-  #       with:
-  #         path: "organicveggie.postgres_docker"
+    steps:
+      - name: "Check out the codebase."
+        uses: "actions/checkout@v2"
+        with:
+          path: "organicveggie.postgres_docker"
 
-  #     - name: "Set up Python 3."
-  #       uses: "actions/setup-python@v4"
-  #       with:
-  #         python-version: "3.x"
+      - name: "Set up Python 3."
+        uses: "actions/setup-python@v4"
+        with:
+          python-version: "3.x"
 
-  #     - name: "Install tox"
-  #       run: >
-  #         python -m pip install tox
+      - name: "Initialize LXD"
+        uses: bonddim/action-lxd-init@stable
 
-  #     - name: "Run Molecule tests."
-  #       run: "tox -- --debug test"
-  #       env:
-  #         PY_COLORS: "1"
-  #         ANSIBLE_FORCE_COLOR: "1"
-  #         MOLECULE_DISTRO: "${{ matrix.distro }}"
-# yamllint enable rule:comments-indentation
+      - name: "Install tox"
+        run: >
+          python -m pip install tox
+
+      - name: "Run Molecule tests."
+        run: >
+          tox -- --debug test --platform-name lxd-instance --driver-name lxd
+        env:
+          PY_COLORS: "1"
+          ANSIBLE_FORCE_COLOR: "1"
+          MOLECULE_DISTRO: "${{ matrix.distro }}"
+          MOLECULE_SCENARIO_NAME: "${{ matrix.scenario }}"
