Split out GitHub lint workflow
Refactor the molecule workflow so it no longer runs lint. Move the lint job into a separate workflow.

--- a/.github/workflows/molecule.yml
+++ b/.github/workflows/molecule.yml
@@ -9,42 +9,15 @@ on:
     branches:
       - "main"
   workflow_dispatch: null
-  schedule:
-    - cron: "0 7 * * 0"
+
+env:
+  PROJECT_DIRECTORY: "organicveggie.postgres_docker"
 
 defaults:
   run:
-    working-directory: "organicveggie.postgres_docker"
+    working-directory: "$PROJECT_DIRECTORY"
 
 jobs:
-  lint:
-    name: "Lint"
-    runs-on: "ubuntu-22.04"
-    steps:
-      - name: "Check out the codebase."
-        uses: "actions/checkout@v2"
-        with:
-          path: "organicveggie.postgres_docker"
-
-      - name: "Set up Python 3."
-        uses: "actions/setup-python@v4"
-        with:
-          python-version: "3.x"
-
-      - name: "Install lint dependencies."
-        run: "pip3 install yamllint ansible ansible-lint"
-
-      - name: "Install Ansible role requirements"
-        run: >
-          ansible-galaxy role install --role-file molecule/resources/requirements.yml
-        working-directory: "organicveggie.postgres_docker"
-
-      - name: "Run linters"
-        run: |
-          yamllint -c .yamllint -f github -s .
-          ansible-lint
-        working-directory: "organicveggie.postgres_docker"
-
   molecule-full:
     name: "Molecule Full"
     runs-on: "ubuntu-latest"
@@ -60,9 +33,9 @@ jobs:
 
     steps:
       - name: "Check out the codebase."
-        uses: "actions/checkout@v2"
+        uses: "actions/checkout@v3"
         with:
-          path: "organicveggie.postgres_docker"
+          path: "$PROJECT_DIRECTORY"
 
       - name: "Set up Python 3."
         uses: "actions/setup-python@v4"
@@ -101,9 +74,9 @@ jobs:
 
     steps:
       - name: "Check out the codebase."
-        uses: "actions/checkout@v2"
+        uses: "actions/checkout@v3"
         with:
-          path: "organicveggie.postgres_docker"
+          path: "$PROJECT_DIRECTORY"
 
       - name: "Set up Python 3."
         uses: "actions/setup-python@v4"
