Update working directory
Adjust a few steps in the GitHub workflows to explicitly include the working directory.

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -40,8 +40,10 @@ jobs:
       - name: "Install Ansible role requirements"
         run: >
           ansible-galaxy role install --role-file molecule/resources/requirements.yml
+        working-directory: "$PROJECT_DIRECTORY"
 
       - name: "Run linters"
         run: |
           yamllint -c .yamllint -f github -s .
           ansible-lint
+        working-directory: "$PROJECT_DIRECTORY"
