--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -12,12 +12,9 @@ on:
   schedule:
     - cron: "0 6 * * 0"
 
-env:
-  PROJECT_DIRECTORY: "organicveggie.postgres_docker"
-
 defaults:
   run:
-    working-directory: "$PROJECT_DIRECTORY"
+    working-directory: "organicveggie.postgres_docker"
 
 jobs:
   lint:
@@ -27,7 +24,7 @@ jobs:
       - name: "Check out the codebase."
         uses: "actions/checkout@v3"
         with:
-          path: "$PROJECT_DIRECTORY"
+          path: "organicveggie.postgres_docker"
 
       - name: "Set up Python 3."
         uses: "actions/setup-python@v4"
@@ -40,10 +37,10 @@ jobs:
       - name: "Install Ansible role requirements"
         run: >
           ansible-galaxy role install --role-file molecule/resources/requirements.yml
-        working-directory: "$PROJECT_DIRECTORY"
+        working-directory: "organicveggie.postgres_docker"
 
       - name: "Run linters"
         run: |
           yamllint -c .yamllint -f github -s .
           ansible-lint
-        working-directory: "$PROJECT_DIRECTORY"
+        working-directory: "organicveggie.postgres_docker"
