--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = ansible{6}
+envlist = ansible{7}
 
 [testenv]
 basepython = python3
@@ -21,8 +21,9 @@ passenv =
     TERM
 
 deps =
-    ansible6: ansible~=6.5
+    ansible7: ansible~=7.4
     molecule~=4.0
+    molecule-vagrant~=2.0.0
     molecule-lxd>=0.4.0a0
 
 commands_pre = molecule --version
