Move requirements file to project root
Move the requirements.txt file and update references to it.

--- a/molecule/custom_names/molecule.yml
+++ b/molecule/custom_names/molecule.yml
@@ -2,8 +2,8 @@
 dependency:
   name: "galaxy"
   options:
-    requirements-file: "molecule/resources/requirements.yml"
-    role-file: "molecule/resources/requirements.yml"
+    requirements-file: "requirements.yml"
+    role-file: "requirements.yml"
 
 driver:
   name: vagrant
