--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -2,13 +2,13 @@
 dependency:
   name: "galaxy"
   options:
-    requirements-file: "molecule/resources/requirements.yml"
-    role-file: "molecule/resources/requirements.yml"
+    requirements-file: "requirements.yml"
+    role-file: "requirements.yml"
 
 driver:
-  name: vagrant
+  name: "vagrant"
   provider:
-    name: virtualbox
+    name: "virtualbox"
 
 platforms:
   - name: "vagrant-instance"
