Update tox config for linux vs macos

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = ansible{7}
+envlist = ansible{7}-{mylinux,mymacos}
 
 [testenv]
 basepython = python3
@@ -21,10 +21,10 @@ passenv =
     TERM
 
 deps =
-    ansible7: ansible~=7.4
+    ansible7: ansible>=7.0
     molecule~=4.0
-    molecule-vagrant~=2.0.0
-    molecule-lxd>=0.4.0a0
+    mylinux: molecule-lxd>=0.4.0a0
+    mymacos: molecule-vagrant>=2.0.0
 
 commands_pre = molecule --version
 commands = molecule {posargs:test --all}
