Update Tox configuration for new molecule packages
Remove references to molecule-lxd.

--- a/tox.ini
+++ b/tox.ini
@@ -2,8 +2,13 @@
 envlist = ansible{7}-{mylinux,mymacos}
 
 [testenv]
+# environment will be skipped if regular expression does not match against the sys.platform string
+platform = mylinux: linux
+           mymacos: darwin
+
 basepython = python3
 skip_install = true
+
 setenv =
     ANSIBLE_FORCE_COLOR={env:ANSIBLE_FORCE_COLOR:1}
     ANSIBLE_REMOTE_TMP=/tmp
@@ -11,6 +16,7 @@ setenv =
     PY_COLORS={env:PY_COLORS:1}
     PYTHONDONTWRITEBYTECODE=1
     PYTHONUNBUFFERED=1
+
 passenv =
     GALAXY_*
     GIT_*
@@ -23,8 +29,8 @@ passenv =
 deps =
     ansible7: ansible>=7.0
     molecule~=4.0
-    mylinux: molecule-lxd>=0.4.0a0
-    mymacos: molecule-vagrant>=2.0.0
+    molecule-plugins>=23.0.0
+    molecule-vagrant>=2.0
 
 commands_pre = molecule --version
 commands = molecule {posargs:test --all}
